--- a/vignettes/glmmSeq.rmd
+++ b/vignettes/glmmSeq.rmd
@@ -333,52 +333,43 @@ at the gene with the most significant interaction _IGHV3-23_:
 
 ```{r, fig.height=6, warning=FALSE}
 plotColours <- c("skyblue", "goldenrod1", "mediumseagreen")
-modColours <- c("Good responder"="dodgerblue3", 
-                "Moderate responder"= "goldenrod3", 
-                "Non responder"="seagreen4")
-shapes <- c("Moderate responder"=19, "Good responder"= 17, "Non responder"=18)
+modColours <- c("dodgerblue3", "goldenrod3", "seagreen4")
+shapes <- c(17, 19, 18)
 
 modelPlot(results,
-           geneName = "IGHV3-23",
-           x1var = "Timepoint",
-           x2var="EULAR_6m",
-           xlab="Time",
-           IDColumn = "PATID",
-           graphics = "ggplot",
-           colours = plotColours,
-           shapes = shapes,
-           lineColours = plotColours, 
-           modelColours = modColours,
-           modelLineColours = modColours,
-           modelSize = 10, 
-           fontSize=10,
-           x2Offset = 8,
-           logTransform=TRUE,
-           addViolin = TRUE,
-           pairedOnly = FALSE) 
+          geneName = "IGHV3-23",
+          x1var = "Timepoint",
+          x2var="EULAR_6m",
+          xlab="Time",
+          colours = plotColours,
+          shapes = shapes,
+          lineColours = plotColours, 
+          modelColours = modColours,
+          modelSize = 10, 
+          fontSize=10,
+          x2Offset = 8)
 ```
 
 Or using base graphics, with or without the model fit overlaid:
 
 ```{r, fig.height=6, warning=FALSE}
-oldpar <- par()
-par(mfrow=c(1, 2))
+oldpar <- par(mfrow=c(1, 2))
 
 modelPlot(results2,
-                geneName = "FGF14",
-                x1var = "Timepoint",
-                x2var="EULAR_binary",
-                fontSize=0.65,
-                colours=c("coral", "mediumseagreen"),
-                modelColours = c("coral", "mediumseagreen"),
-                modelLineColours = "black",
-                modelSize = 2)
+          geneName = "FGF14",
+          x1var = "Timepoint",
+          x2var="EULAR_binary",
+          fontSize=0.65,
+          colours=c("coral", "mediumseagreen"),
+          modelColours = c("coral", "mediumseagreen"),
+          modelLineColours = "black",
+          modelSize = 2)
 
 modelPlot(results,
-                geneName = "EMILIN3",
-                x1var = "Timepoint",
-                x2var = "EULAR_6m",
-                colours = plotColours,
+          geneName = "EMILIN3",
+          x1var = "Timepoint",
+          x2var = "EULAR_6m",
+          colours = plotColours,
           addModel = FALSE)
 
 par(oldpar)
