--- a/vignettes/glmmSeq.rmd
+++ b/vignettes/glmmSeq.rmd
@@ -281,7 +281,8 @@ kable(stats[order(stats[, 'P_Timepoint:EULAR_6m']), ]) %>%
   scroll_box(width = "100%", height = "400px")
 ```
 
-And the final model output can be seen in the `@predict` slot:
+Estimated means based on each gene's fitted model to show fixed effects and
+their 95% confidence intervals can be seen in the `@predict` slot:
 
 ```{r}
 predict = data.frame(results@predict)
@@ -292,9 +293,9 @@ kable(predict) %>%
 
 # Q-values
 
-The qvalues from each of the pvalue columns can be calculated using `glmmQvals`. 
-This will print a significance table based on the cut-off (default p=0.05) and 
-add a matrix called `qvals` to the `@stats` slot:
+The q-values from each of the p-value columns can be calculated using
+`glmmQvals`. This will print a significance table based on the cut-off (default
+p=0.05) and add a matrix named `qvals` to the `@stats` slot:
 
 ```{r}
 results <- glmmQvals(results)
@@ -312,20 +313,23 @@ MS4A1glmm <- glmmSeq(~ Timepoint * EULAR_6m + (1 | PATID),
                      verbose = FALSE)
 ```
 
-or to view the lmer fit alone using `glmmGene`:
+The (g)lmer fitted object can be obtained using the function `lmmRefit()`:
 
 ```{r, warning=FALSE}
-MS4A1fit <- glmmGene(~ Timepoint * EULAR_6m + (1 | PATID),
-                     gene = "MS4A1",
-                     id = "PATID",
-                     countdata = tpm,
-                     metadata = metadata,
-                     dispersion = disp['MS4A1'])
-
-MS4A1fit
+fit <- lmmRefit(results, gene = "MS4A1")
+fit
 ```
 
-This has the advantage of increased model flexibility.
+These (g)lmer objects can be passed to other packages notably `emmeans` for
+visualising estimated marginal means. Note these are based on the model, not
+directly on the data.
+
+```{r, warning=FALSE}
+library(emmeans)
+
+emmeans(fit, ~ Timepoint | EULAR_6m)
+emmip(fit, ~ Timepoint | EULAR_6m)
+```
 
 # Model Plots
 
