--- a/vignettes/glmmSeq.rmd
+++ b/vignettes/glmmSeq.rmd
@@ -344,7 +344,7 @@ slower than a negative binomial GLMM fit by `lme4::glmer` with family function
 `MASS::negative.binomial` for which the dispersion parameter must be
 pre-specified. Each `glmmTMB` model takes about 0.8 seconds, so that even with 8
 cores, a typical transcriptome of 20,000 genes would take about 30 minutes,
-although this will vary depending on complexity of the design formula. In
+although this will vary depending on the complexity of the design formula. In
 comparison, the standard `glmer` pipeline with known dispersions supplied takes
 about 2 minutes on 8 cores.
 
